--- a/sass/plugins/charitable/_donation-form.scss
+++ b/sass/plugins/charitable/_donation-form.scss
@@ -334,4 +334,8 @@
     #charitable-donation-amount-form {
         padding: 0;
     }
+
+    #charitable-gateway-fields .charitable-gateway-fields {
+        width: 100%;
+    }
 }
